5/18/2006
	- The result of a Lookup that involves a CNAME should include
	  the queried name as one of the aliases, not the CNAME target.
	  (Jon Lachelt <jon.lachelt@hp.com>)

2/13/2006
	- Loading zones containing RRsets with multiple records didn't work.
	  (reported by Olafur Gudmundsson" <ogud@ogud.com>)

1/24/2006
	- AXFR requests could leak file descriptors if the connection
	  failed. (Can Bican <can@bican.net>)

11/30/2005
	- Add a Resolver.setTimeout(int secs, int msecs) method.
	  (requested by Dmitry Isakbayev) <isakdim@users.sourceforge.net>)

11/30/2005
	- 2.0.1 released.

11/11/2005
	- The InetAddresses returned by Address.getByName() should have their
	  hostname copied from the input parameter.
	  (reported by Praveen Tammana <praveen.public@gmail.com>)

11/7/2005
	- Update remaining DNSSEC code to be compliant with the current spec.

11/6/2005
	- Add a Resolver.setEDNS(int level, int payloadSize, int flags,
	  List options) method, to allow a Resolver to automatically set
	  the DO flag, as well as future EDNS features.
	  (requested by Rick Wesson <wessorh@ar.com>)

10/25/2005
	- The Master(InputStream in, Name origin) constructor should not
	  always fail.
	- Correctly handle the case where reading a Master from an InputStream
	  would throw a NullPointerException if a $INCLUDE file wasn't found.
	  (reported by Lars Petrus <Lars.Petrus@nominum.com>)

8/22/2005
	- Add Address.getByAddress(String) and
	  Address.getByAddress(String, family).

7/21/2005
	- Zone.findExactMatch() would throw a NullPointerException if the
	  name didn't exist.
	  (reported by Hans Zandbelt <Hans.Zandbelt@telin.nl>)

7/19/2005
	- Add support for binding clients to local addresses when using
	  a SimpleResolver.  Also add the -b option to the dig program
	  to test this. (based on a patch by Bruno Dillenseger)

7/5/2005
	- Add support to ResolverConfig for using the undocumented
	  sun.net.dns.ResolverConfiguration class to determine the list