@@ -1,3 +1,6 @@
+6/22/2006
+	- Add support for the IPSECKEY record type.
+
 5/18/2006
 	- The result of a Lookup that involves a CNAME should include
 	  the queried name as one of the aliases, not the CNAME target.
